2010-07-17  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* NEWS: 1.0 release.

2010-07-07  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* actors.py, EXIF.py: Removed obsolete has_key methods.

2010-07-05  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* NEWS: 1.0-b5 release.
	* keyring.py: Fixed a segmentation fault problem of relating to
	  use DBus from multiple threads.

2010-07-01  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* flickr/__init__.py (FlickrPhotoList._prepare_cb): Fixed a
	  strptime format.
	* base.py (ParseEXIF.get_date_taken): Added support for 
	  'EXIF DateTimeOriginal'.

2010-06-27  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* NEWS: 1.0-b4 release.
	* actors.py (ActorSourceIcon._get_ui_data): Changed the
	  'show_always' default value to 'False'.
	* picasa.py (PicasaPhotoList._set_photo_cb): Fixed KeyErrors.

2010-06-21  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* NEWS: 1.0-b3 release.

2010-06-16  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* fspot/__init__.py, utils/inotify.py: Removed __del__ methods.
	* gphotoframe.schemas.in: Changed the default value of
	  'ui/source/always_show' to 'false'.

2010-06-14  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* NEWS: 1.0-b2 release.
	* actors.py (ActorInfoIcon): Adjust an EXIF icon position offset.
	* keyring.py (Keyring.get_passwd): Added an exception for
	  gnomekeyring.CancelledError.

2010-06-13  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* keyring.py (Keyring.get_passwd): Added an exception for
	  IndexError.

2010-06-12  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* NEWS: 1.0-b1 release.

2010-06-03  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* rss.py: Fixed a ZeroDivisionError.

2010-05-31  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* actors.py (ActorSourceIcon): Added _check_hide_always() for
	  hiding compulsory a source icon on photo images.
	* liststore.py: Improved cache file management.
	  Added gcon keys 'queue_menu_num' & 'queue_menu_num'.
	* photo*: Removed 'photo' from module names.
